--- a/nail-tech/src/components/Hero/hero.css
+++ b/nail-tech/src/components/Hero/hero.css
@@ -77,7 +77,7 @@
     }
     
     .heroimg {
-        height: 450px;
+        min-height: 450px;
     }
     
     .herotitle {
@@ -93,7 +93,19 @@
     
     .herodes {
         max-width: 45rem;
-        margin-bottom: 3rem;
+        margin-bottom: 0;
+    }
+
+    .herobtn{
+        display: inline-block;
+    }
+
+    .herobtn1{
+        margin-right: 0%;
+    }
+
+    .herobtn2{
+        margin-left: 0%;
     }
 }
 
@@ -104,7 +116,7 @@
     }
     
     .heroimg {
-        height: 400px;
+        min-height: 400px;
         border-radius: .6rem;
     }
     
@@ -115,7 +127,7 @@
     }
     
     .heroheading {
-        font-size: 2.2rem;
+        font-size: 2.15rem;
         max-width: 100%;
         margin-top: .5rem;
     }
@@ -123,7 +135,8 @@
     .herodes {
         font-size: .95rem;
         max-width: 100%;
-        margin-bottom: 2.5rem;
+        margin-bottom: 0rem;
+        margin-top: 1.5rem;
     }
     
     .herobtn1, .herobtn2 {
@@ -132,7 +145,7 @@
     }
     
     .herobtn1 {
-        margin-right: .8rem;
+        margin-right: 0rem;
     }
 }
 
@@ -143,7 +156,7 @@
     }
     
     .heroimg {
-        height: 350px;
+        min-height: 350px;
         border-radius: .5rem;
     }
     
@@ -155,13 +168,17 @@
     }
     
     .heroheading {
-        font-size: 1.8rem;
+        font-size: 2rem;
         max-width: 100%;
         margin-top: .3rem;
         line-height: 1.2;
+        text-align: center;
+        margin-bottom: 1.5rem;
+        margin-top: 2rem;
     }
     
     .herodes {
+        text-align: center;
         font-size: .9rem;
         max-width: 100%;
         margin-bottom: 2rem;
@@ -182,24 +199,3 @@
     }
 }
 
-/* Extra small mobile styles (up to 375px) */
-@media screen and (max-width: 375px) {
-    .heroimg {
-        height: 300px;
-    }
-    
-    .herotitle {
-        top: 1rem;
-        left: 1rem;
-        right: 1rem;
-    }
-    
-    .heroheading {
-        font-size: 1.5rem;
-    }
-    
-    .herodes {
-        font-size: .85rem;
-        margin-bottom: 1.5rem;
-    }
-}
