--- a/nail-tech/src/components/About/about.css
+++ b/nail-tech/src/components/About/about.css
@@ -4,7 +4,6 @@
 
 .aboutsection p{
     margin-top: 2rem;
-    margin-bottom: 2rem;
 }
 
 .aboutbtn{
@@ -30,6 +29,7 @@
 @media screen and (max-width: 1024px) and (min-width: 769px) {
     .aboutsection {
         padding: 2% 10%;
+        margin-top: 1.5rem;
     }
     
     .aboutsection h1 {
@@ -38,7 +38,7 @@
     
     .aboutsection p {
         margin-top: 1.8rem;
-        margin-bottom: 1.8rem;
+        margin-bottom: 0rem;
         font-size: 0.95rem;
         line-height: 1.6;
     }
@@ -46,6 +46,7 @@
     .aboutbtn {
         padding: .6rem 1.2rem;
         font-size: 0.95rem;
+        width: 10rem;
     }
     
     .aboutbtn:hover {
@@ -58,11 +59,11 @@
 @media screen and (max-width: 768px) and (min-width: 481px) {
     .aboutsection {
         padding: 2% 6%;
+        margin-top: 1.5rem;
     }
     
     .aboutsection h1 {
-        font-size: 1.3rem;
-        text-align: center;
+        font-size: 1.4rem;
     }
     
     .aboutsection p {
@@ -91,10 +92,11 @@
 @media screen and (max-width: 480px) {
     .aboutsection {
         padding: 2% 4%;
+        margin-top: 1.5rem;
     }
     
     .aboutsection h1 {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         text-align: center;
         margin-bottom: 0.5rem;
     }
@@ -120,6 +122,8 @@
     .aboutbtn:hover {
         padding: .8rem 1.5rem;
         font-size: 0.85rem;
+        background: deeppink;
+        color: white;
     }
 }
 
