--- a/nail-tech/src/components/Contact/contact.css
+++ b/nail-tech/src/components/Contact/contact.css
@@ -121,10 +121,16 @@ button:hover {
 @media screen and (max-width: 1024px) and (min-width: 769px) {
     .contactsection {
         padding: 2% 10%;
+        margin-top: 1.5rem;
+    }
+
+    .contactsection h1{
+        font-size: 1.4rem;
     }
     
     .contactsection p {
         margin-bottom: 1.8rem;
+        color: pink;
     }
     
     input,
@@ -142,11 +148,12 @@ button:hover {
 @media screen and (max-width: 768px) and (min-width: 481px) {
     .contactsection {
         padding: 2% 6%;
+        margin-top: 1.5rem;
     }
     
     .contactsection h1 {
-        font-size: 1.3rem;
-        text-align: center;
+        font-size: 1.4rem;
+        
     }
     
     .contactsection p {
@@ -188,10 +195,11 @@ button:hover {
 @media screen and (max-width: 480px) {
     .contactsection {
         padding: 2% 4%;
+        margin-top: 1.5rem;
     }
     
     .contactsection h1 {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         text-align: center;
         margin-bottom: 0.5rem;
     }
