--- a/nail-tech/src/components/Trend/trend.css
+++ b/nail-tech/src/components/Trend/trend.css
@@ -41,6 +41,7 @@
 @media screen and (max-width: 1024px) and (min-width: 769px) {
     .herosub {
         padding: 2% 8%;
+        margin-top: 1.5rem;
     }
     
     .herosub h1 {
@@ -68,6 +69,7 @@
 @media screen and (max-width: 768px) and (min-width: 481px) {
     .herosub {
         padding: 2% 5%;
+        margin-top: 1.5rem;
     }
     
     .herosub h1 {
@@ -98,9 +100,10 @@
     }
     
     .herosub h1 {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         margin-bottom: 1.2rem;
         text-align: center;
+        margin-top: 1.5rem;
     }
     
     .herotrend {
@@ -118,8 +121,8 @@
     .trend2 p,
     .trend3 p {
         font-size: .75rem;
-        margin-top: .3rem;
-        text-align: center;
+        margin-top: .1rem;
+        
     }
 }
 
