--- a/nail-tech/src/components/Navbar/navbar.css
+++ b/nail-tech/src/components/Navbar/navbar.css
@@ -21,6 +21,10 @@
     align-items: center;
 }
 
+.active{
+    color: deeppink;
+}
+
 .navlink a{
     text-decoration: none;
     font-size: 1rem;
