--- a/nail-tech/src/components/Trend/trend.css
+++ b/nail-tech/src/components/Trend/trend.css
@@ -100,7 +100,7 @@
     }
     
     .herosub h1 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         margin-bottom: 1.2rem;
         text-align: center;
         margin-top: 1.5rem;
@@ -116,11 +116,17 @@
         height: 250px;
         object-fit: center;
     }
+
+    .trend1 h4,
+    .trend2 h4,
+    .trend3 h4{
+        font-size: .8rem;
+    } 
     
     .trend1 p,
     .trend2 p,
     .trend3 p {
-        font-size: .75rem;
+        font-size: .6rem;
         margin-top: .1rem;
         
     }
